# indextts-fastapi

./: .dockerignore  .gitignore  DOCKER_BUILD_OPTIMIZATION.md  Dockerfile  LICENSE  README.md  SETUP_GITHUB.md  config.yaml  docker-compose.yml  pyproject.toml  start.sh  voice_mappings.json
examples/: basic_usage.py
indextts_fastapi/: __init__.py  api.py  config.py  model_downloader.py
scripts/: setup.sh
